Fixeds scrollbar

--- a/theme/static/css/main.css
+++ b/theme/static/css/main.css
@@ -2,7 +2,6 @@ body, html {
   padding: 0;
   margin: 0;
   height: 100%;
-  overflow-x: hidden;
 }
 
 body {
